--- a/src/main/resources/templates/course_students.html
+++ b/src/main/resources/templates/course_students.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
   <!-- Required meta tags -->
@@ -22,58 +23,80 @@
 <section class="inner-banner py-5">
   <div class="w3l-breadcrumb py-lg-5">
     <div class="container pt-4 pb-sm-4">
-      <h4 class="inner-text-title pt-5">Holidays</h4>
+      <h4 class="inner-text-title pt-5">Course Students Details</h4>
       <ul class="breadcrumbs-custom-path">
         <li><a th:href="@{/home}">Home</a></li>
-        <li class="active"><i class="fas fa-angle-right"></i>Holidays</li>
+        <li class="active"><i class="fas fa-angle-right"></i>Course Students</li>
       </ul>
     </div>
   </div>
 </section>
 <!-- //inner banner -->
 
-<!-- Holidays -->
-<section class="w3l-timeline-1 py-5">
-  <div class="container py-lg-5 py-4">
-    <div class="title-heading-w3 text-center mb-sm-5 mb-4">
-      <h5 class="title-small">Eazy School</h5>
-      <h3 class="title-style">Awesome Holidays</h3>
-    </div>
-    <div class="row">
-      <div class="col-lg-6" th:if="${festival} == true">
-        <h5 class="sub-title-timeline"><i class="fas fa-snowman"></i> Festival Holidays</h5>
-        <div class="timeline">
-          <div class="timeline">
-            <div th:each="holiday : ${FESTIVAL}" class="column">
-              <div class="title">
-                <h2 th:text="${holiday.reason}"></h2>
-              </div>
-              <div class="description">
-                <h6 th:text="${holiday.day}" class="fas fa-calendar-alt"><i class="fas fa-calendar-alt"></i></h6>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="site-section">
 
-      <div class="col-lg-6 mt-lg-0 mt-4" th:if="${federal} == true">
-        <h5 class="sub-title-timeline"><i class="fas fa-flag-usa"></i> Federal Holidays </h5>
-        <div class="timeline">
-          <div th:each="holiday : ${FEDERAL}" class="column">
-            <div class="title">
-              <h2 th:text="${holiday.reason}"></h2>
-            </div>
-            <div class="description">
-              <h6 th:text="${holiday.day}" class="fas fa-calendar-alt"><i class="fas fa-calendar-alt"></i></h6>
-            </div>
+  <div class="table-responsive-class">
+
+    <div class="row mb-4">
+      <li class="alert alert-danger" role="alert" th:if="${!#strings.isEmpty(errorMessage)}"
+          th:text="${errorMessage}" />
+      <div class="overview-wrap">
+        <h3 class="heading-21921" th:text="${courses.name} + ' Course Students Details'"></h3>
+        <button class="btn btn-style btn-style-3 text-left" type="button"
+                data-bs-toggle="modal" data-bs-target="#addStudent">ADD STUDENT</button>
+      </div>
+    </div>
+    <div class="modal fade login-block" id="addStudent" tabindex="-1" role="dialog"
+         aria-labelledby="addStudentModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header border-bottom-0">
+            <h5 class="modal-title" id="addStudentModalLabel">Add Student to Course</h5>
+            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
+          <form th:action="@{/admin/addStudentToCourse}" method="post" class="signin-form" th:object="${person}">
+            <div class="modal-body">
+              <div class="input-grids">
+                <label class="control-label" for="email">Student Email </label>
+                <input type="email" class="form-control" name="email" id="email" th:field="*{email}"
+                       required placeholder="Enter Student email">
+              </div>
+            </div>
+            <div class="modal-footer border-top-0 d-flex justify-content-center">
+              <button type="submit" class="btn btn-style btn-style-3">Submit</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
+    <table class="table table-striped table-hover">
+      <thead class="table-dark">
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Mobile Num</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="person: ${courses.persons}">
+        <td th:text="${person.name}"></td>
+        <td th:text="${person.email}"></td>
+        <td th:text="${person.mobileNumber}"></td>
+        <td><a th:href="@{/admin/deleteStudentFromCourse(personId=${person.personId})}" class="btn btn-warning">DELETE</a></td>
+      </tr>
+      </tbody>
+    </table>
   </div>
-</section>
-
-<!-- // Holidays -->
+  <div class="col-md-2 login-center text-start">
+    <a th:href="@{/admin/displayCourses}">
+      <button class="btn btn-style btn-style-3 text-left">BACK</button>
+    </a>
+  </div>
+</div>
 
 <!-- footer block -->
 <div th:replace="~{footer :: footer}">...</div>
@@ -109,10 +132,6 @@
 <!-- common jquery plugin -->
 <script src="/assets/js/jquery-3.3.1.min.js"></script>
 <!-- //common jquery plugin -->
-
-<!-- counter-->
-<script src="/assets/js/counter.js"></script>
-<!-- //counter-->
 
 <!-- theme switch js (light and dark)-->
 <script src="/assets/js/theme-change.js"></script>
