--- a/src/main/resources/templates/courses_enrolled.html
+++ b/src/main/resources/templates/courses_enrolled.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
   <!-- Required meta tags -->
@@ -22,58 +23,48 @@
 <section class="inner-banner py-5">
   <div class="w3l-breadcrumb py-lg-5">
     <div class="container pt-4 pb-sm-4">
-      <h4 class="inner-text-title pt-5">Holidays</h4>
+      <h4 class="inner-text-title pt-5">Enrolled Courses</h4>
       <ul class="breadcrumbs-custom-path">
         <li><a th:href="@{/home}">Home</a></li>
-        <li class="active"><i class="fas fa-angle-right"></i>Holidays</li>
+        <li class="active"><i class="fas fa-angle-right"></i>Enrolled Courses</li>
       </ul>
     </div>
   </div>
 </section>
 <!-- //inner banner -->
 
-<!-- Holidays -->
-<section class="w3l-timeline-1 py-5">
-  <div class="container py-lg-5 py-4">
-    <div class="title-heading-w3 text-center mb-sm-5 mb-4">
-      <h5 class="title-small">Eazy School</h5>
-      <h3 class="title-style">Awesome Holidays</h3>
-    </div>
-    <div class="row">
-      <div class="col-lg-6" th:if="${festival} == true">
-        <h5 class="sub-title-timeline"><i class="fas fa-snowman"></i> Festival Holidays</h5>
-        <div class="timeline">
-          <div class="timeline">
-            <div th:each="holiday : ${FESTIVAL}" class="column">
-              <div class="title">
-                <h2 th:text="${holiday.reason}"></h2>
-              </div>
-              <div class="description">
-                <h6 th:text="${holiday.day}" class="fas fa-calendar-alt"><i class="fas fa-calendar-alt"></i></h6>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="site-section">
 
-      <div class="col-lg-6 mt-lg-0 mt-4" th:if="${federal} == true">
-        <h5 class="sub-title-timeline"><i class="fas fa-flag-usa"></i> Federal Holidays </h5>
-        <div class="timeline">
-          <div th:each="holiday : ${FEDERAL}" class="column">
-            <div class="title">
-              <h2 th:text="${holiday.reason}"></h2>
-            </div>
-            <div class="description">
-              <h6 th:text="${holiday.day}" class="fas fa-calendar-alt"><i class="fas fa-calendar-alt"></i></h6>
-            </div>
-          </div>
-        </div>
+  <div class="table-responsive-class">
+
+    <div class="row mb-4">
+      <div class="overview-wrap">
+        <h3 class="heading-21921" th:text="${person.name} + ' Enrolled Courses'"></h3>
       </div>
     </div>
+    <table class="table table-striped table-hover">
+      <thead class="table-dark">
+      <tr>
+        <th scope="col">Course ID</th>
+        <th scope="col">Course Name</th>
+        <th scope="col">Fees</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="course: ${person.courses}">
+        <td th:text="${course.courseId}"></td>
+        <td th:text="${course.name}"></td>
+        <td th:text="${course.fees}"></td>
+      </tr>
+      </tbody>
+    </table>
   </div>
-</section>
-
-<!-- // Holidays -->
+  <div class="col-md-2 login-center text-start">
+    <a th:href="@{/dashboard}">
+      <button class="btn btn-style btn-style-3 text-left">BACK</button>
+    </a>
+  </div>
+</div>
 
 <!-- footer block -->
 <div th:replace="~{footer :: footer}">...</div>
@@ -109,10 +100,6 @@
 <!-- common jquery plugin -->
 <script src="/assets/js/jquery-3.3.1.min.js"></script>
 <!-- //common jquery plugin -->
-
-<!-- counter-->
-<script src="/assets/js/counter.js"></script>
-<!-- //counter-->
 
 <!-- theme switch js (light and dark)-->
 <script src="/assets/js/theme-change.js"></script>
